# CPP-Starter-API

./: .env.example  .gitignore  CMakeLists.txt  docker-compose.yml  install_deps.sh  package.json  readme.md  run_dev.sh
sql/: 01_create_users_table.sql
src/: main.cc  main.cpp  tailwind.config.js  watch_fs.sh
src/client_wasm/: CMakeLists.txt  Scene.hpp  main.cpp  menu.hpp
src/controllers/: controllers.hpp  dashboard_controller.hpp  user_controller.hpp
src/dev_utils/: ongoing_processes.hpp
src/middlewares/: middleware.hpp
src/models/: user_model.hpp
src/services/: db_connect.hpp
src/static/css/: input.css  output.css
src/static/js/: main.js
src/static/js/forms/: register.js
src/templates/: _footer.html  _header.html  dashboard.html  index.html  login.html
src/templates/partials/: _login_form.html  _register_form.html
